--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
  }
 
 aside#index_a{
-   background-color: lightyellow;
+   background-color: #f9f9f9;
    width: 230px;
    height: auto;
    position: absolute;
@@ -65,7 +65,7 @@ head {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: lightgrey;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
